2011-01-12  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/network/ConcurrentMessageQueue.h: Add support for timed
	message queues.
	* include/network/AsynClient.tcc: Likewise.
	* include/network/MessagingGateway.h: Likewise.
	* testsuite/testMessagingGateway.cpp: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.
	* src/network/MessageDispatcher.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/network/ConcurrentMessageDispatcher.cpp: Likewie.
	* include/network/MessageDispatcher.h: Likewise.
	* include/network/ConcurrentMessageDispatcher.h: Likewise.

2011-01-11  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/network/AsynClient.tcc: Send answers to neighbor's queue
	for the joiner.

	* src/network/NeighborInputThread.cpp: Clean up.

	* src/network/ConcurrentMessageQueueFactory.cpp: Add a comment to
	mark the offset.

	* include/network/JoinThread.h: On implemeting the join.
	* src/network/JoinThread.cpp: Likewise.

2011-01-11  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/generator/ContextGenerator.cpp: Add support for DMCS_LOG_*.
	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.

	* include/mcs/BeliefState.h: Fix argument-dependent name lookup.

	* include/network/MessagingGateway.h: Allow to send/receive pairs
	of BeliefState/Conflict.
	* include/network/ConcurrentMessageDispatcher.h: Likewise.
	* include/network/MessageDispatcher.h: Likewise.
	* src/network/ConcurrentMessageQueueFactory.cpp: Likewise.
	* src/network/ConcurrentMessageDispatcher.cpp: Likewise.
	* src/network/MessageDispatcher.cpp: Likewise.
	* src/network/MessageQueueFactory.cpp: Likewise.

2011-01-11  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/network/JoinThread.h: Need c2o (bimap between
	context id and the "offset" in neighbors' message queue).
	* include/network/NeighborInputThread.h: Likewise.
	* include/network/ThreadFactory.h: Likewise.