@@ -18,7 +18,7 @@
  */
 
 /**
- * @file   ThreadFactory.cpp
+ * @file   JoinThread.cpp
  * @author Minh Dao Tran <dao@kr.tuwien.ac.at>
  * @date   Tue Jan  11 9:06:24 2011
  * 
@@ -27,6 +27,7 @@
  * 
  */
 
+#include "dmcs/BeliefCombination.h"
 #include "network/JoinThread.h"
 
 #include "dmcs/Log.h"
@@ -45,9 +46,11 @@ JoinThread::JoinThread(std::size_t no_nbs_,
 void
 JoinThread::import_belief_states(std::size_t ctx_id, std::size_t peq_cnt, 
 				 BeliefStatePackagePtr partial_eqs, 
-				 bm::bvector<>& mask,
+				 bm::bvector<>& in_mask,
+				 bm::bvector<>& end_mask,
 				 BeliefStateIteratorVecPtr beg_it, 
-				 BeliefStateIteratorVecPtr mid_it)
+				 BeliefStateIteratorVecPtr mid_it,
+				 bool first_import)
 {
   const HashedBiMapByFirst& from_context = boost::get<Tag::First>(*c2o);
   HashedBiMapByFirst::const_iterator pair = from_context.find(ctx_id);
@@ -56,12 +59,6 @@ JoinThread::import_belief_states(std::size_t ctx_id, std::size_t peq_cnt,
 
   // read BeliefState* from NEIGHBOR_MQ
   BeliefStateVecPtr bsv = (*partial_eqs)[index];
-  bool first_import = false;
-
-  if (bsv->size() == 0)
-    {
-      first_import = true;
-    }
 
   if (!first_import)
     {
@@ -73,37 +70,107 @@ JoinThread::import_belief_states(std::size_t ctx_id, std::size_t peq_cnt,
       std::size_t prio = 0;
       std::size_t timeout = 0;
       BeliefState* bs = mg->recvModel(off, prio, timeout);
+      if (bs == 0)
+	{
+	  // It must be the last model to be NULL;
+	  // otw, the neighbor sent me some crap
+	  assert (i == peq_cnt - 1);
+	 
+	  // mark that this neighbor reached its pack_size. 
+	  end_mask.set(index);
+
+	  // NULL models are not used for joining
+	  break;
+	}
       bsv->push_back(bs); 
     }
   
   if (first_import)
     {
       (*beg_it)[index] = bsv->begin();
-      (*mid_it)[index] = bsv->begin();
     }
   else
     {
-      (*mid_it)[index]++;
+      ++(*mid_it)[index];
     }
 
   // turn on the bit that is respective to this context
-  mask.set(index);
+  in_mask.set(index);
 }
 
 
 
+// one-shot joining
+std::size_t 
+JoinThread::join(const BeliefStateIteratorVecPtr run_it)
+{
+  // We don't need the interface V here
+  BeliefStateIteratorVec::const_iterator it = run_it->begin();
+  BeliefState* first_bs = **it;
+
+  BeliefState* result = new BeliefState(*first_bs);
+  
+  ++it;
+  for (; it != run_it->end(); ++it)
+    {
+      BeliefState* next_bs = **it;
+      if (!combine(*result, *next_bs))
+	{
+	  return 0;
+	}
+    }
+
+  // Joining succeeded. Now send this input to SAT solver via JOIN_OUT_MQ
+  // be careful that we are blocked here. Use timeout sending instead?
+  mg->sendModel(result, 0, ConcurrentMessageQueueFactory::JOIN_OUT_MQ, 0);
+
+  return 1;
+}
+
+
+
+// join in which the range is determined by beg_it to end_it
 void
 JoinThread::join(BeliefStatePackagePtr partial_eqs, 
 		 BeliefStateIteratorVecPtr beg_it, 
-		 BeliefStateIteratorVecPtr mid_it)
+		 BeliefStateIteratorVecPtr end_it)
 {
-
-  // mark the completion of this join
-  for (std::size_t i = 0; i < no_nbs; ++i)
+  // initialization
+  assert ((partial_eqs->size() == beg_it->size()) && (beg_it->size() == end_it->size()));
+  std::size_t n = partial_eqs->size();
+  BeliefStateIteratorVecPtr run_it(new BeliefStateIteratorVec);
+  
+  for (std::size_t i = 0; i < n; ++i)
     {
-      BeliefStateVecPtr bsv = (*partial_eqs)[i];
+      run_it->push_back((*beg_it)[i]);
+    }
 
-      (*mid_it)[i] = --(bsv->end());
+  // recursion disposal
+  std::size_t inc = n-1;
+  while (inc > 0)
+    {
+      join(run_it);
+      inc = n-1;
+
+      // find the greates index whose running iterator incrementable to a non-end()
+      while (inc > 0)
+	{
+	  (*run_it)[inc]++;
+	  if ((*run_it)[inc] != (*end_it)[inc])
+	    {
+	      break;
+	    }
+	  else
+	    {
+	      --inc;
+	    }
+	}
+      
+      // reset all running iterator after inc to beg_it
+      for (std::size_t i = inc+1; i < n; ++i)
+	{
+	  (*run_it)[i] = (*beg_it)[i];
+	}
     }
 }
 
@@ -114,7 +181,9 @@ JoinThread::operator()()
   DMCS_LOG_DEBUG(__PRETTY_FUNCTION__);
   
   bool stop = false;
-  bm::bvector<> mask;
+  bool first_import = true;
+  bm::bvector<> in_mask;
+  bm::bvector<> end_mask;
 
   // set up package of empty BeliefStates
   BeliefStatePackagePtr partial_eqs(new BeliefStatePackage);
@@ -138,12 +207,48 @@ JoinThread::operator()()
       MessagingGateway<BeliefState, Conflict>::JoinIn nn = 
 	mg->recvJoinIn(ConcurrentMessageQueueFactory::JOIN_IN_MQ, prio, timeout);
 
-      import_belief_states(nn.ctx_id, nn.peq_cnt, partial_eqs, mask, beg_it, mid_it);
+      import_belief_states(nn.ctx_id, nn.peq_cnt, partial_eqs, 
+			   in_mask, end_mask,
+			   beg_it, mid_it, first_import);
 
-      // all neighbors have returned some models (not necessarily pack_size)
-      if (mask.count_range(0, no_nbs) == no_nbs)
+      // all neighbors have returned some models (not necessarily up to pack_size)
+      if (in_mask.count_range(0, no_nbs+1) == no_nbs)
 	{
 	  // time to join
+	  if (first_import)
+	    {
+	      // assign first time join
+	      first_import = false;
+	      for (std::size_t i = 0; i < no_nbs; ++i)
+		{
+		  BeliefStateVecPtr bsv = (*partial_eqs)[i];
+		  (*mid_it)[i] = bsv->end();
+		}
+	      join(partial_eqs, beg_it, mid_it);
+	    }
+	  else
+	    {
+	      // not the first time, so we just join selectively
+	      for (std::size_t i = 0; i < no_nbs; ++i)
+		{
+		  BeliefStateVecPtr bsv = (*partial_eqs)[i];
+		  if ((*mid_it)[i] != bsv->end())
+		    {
+		      // This neighbor has some new models.
+		      (*beg_it)[i] = (*mid_it)[i];
+		      (*mid_it)[i] = bsv->end();
+		      join(partial_eqs, beg_it, mid_it);
+		    }
+		}
+	    }
+	  
+	  if (end_mask.count_range(0, no_nbs+1) == no_nbs)
+	    {
+	      // all neighbors reached their pack_size. Need a
+	      // strategy to find a neighbor to ask for next models.
+	      // for now let stop
+	      stop = true;
+	    }
 	}
 
       ///@todo: determine the condition for stop = true;
