@@ -1,3 +1,14 @@
+2011-01-12  Minh Dao Tran  <dao@kr.tuwien.ac.at>
+
+	* include/network/JoinThread.h: Add streaming join.
+	* src/network/JoinThread.cpp: Likewise.
+
+	* include/mcs/BeliefState.h: Move some typedef here.
+
+	* include/dmcs/BeliefCombination.h: Combination done with
+	BeliefState& and doesn't need V.
+	* src/dmcs/BeliefCombination.cpp: Likewise.
+
 2011-01-12  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>
 
 	* include/network/ConcurrentMessageQueue.h: Add support for timed
